--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>React App</title>
+    <title>Generador de reportes</title>
+    <meta name="description" content="Sistema generador de reportes para seguimiento de pruebas de investigación.">
   </head>
 
   <body>
-    <noscript>
-    </noscript>
     <div id="root"></div>
   </body>
   
