REP-16 Nombre de tecnico
Meta tags keywords, author y robots agregados, validacion de las datos de entrada nombre y apellido

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Generador de reportes</title>
     <meta name="description" content="Sistema generador de reportes para seguimiento de pruebas de investigación.">
+    <meta name="keywords" content="Reportes">
+    <meta name="author" content="Joel Buenrostro">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
   </head>
 
   <body>
