REP-29 Campos predefinidos para muestras
Se agregan campos predefinos en donde se ingresaran los datos, cambio en la declaracion de componentes

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
   </head>
 
   <body>
+    <noscript>Necesitar habilitar JavaScript para usar esta pagina.</noscript>
     <div id="root"></div>
   </body>
   
