REP-30 Material design
Cambio a material design como estilo de diseño general

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
     <meta name="author" content="Joel Buenrostro">
     <meta name="robots" content="index, follow">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+    <!--Fonts-->
+    <link href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
   </head>
 
   <body>
